# taskify_desktop

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
.github/workflows/: build.yml
src/: main.cpp  service.h  task.h  taskify.cpp  taskify.h
src/qml/: main.qml
src/qml/component/: TitleBar.qml
src/qml/page/: Home.qml
src/task/: task.h  task_state.h
tests/: foo.c  foo.cpp  foo.rs
